src/scss/components/_footer.scss
.footer {
    padding-top: 4.5rem;
    padding-bottom: 4rem;
    color: $medium-moderate-cyan;
    background-color: $light-moderate-cyan;
    text-align: center;

    a {
        text-decoration: none;
        color: $medium-moderate-cyan;
        transition: color 0.15s ease-in-out;

        &:hover,
        &:focus {
            color: $white
        }
    }
}

.footer__logo {
    margin-bottom: 2.5rem;
}

.footer__links {
    margin-bottom: 4.25rem;

    a {
        font-size: 1.125rem;
        padding: 1.5rem;
    }
}

.footer__social {
    @extend .list-unstyled;
    display: flex;
    align-items: center;
    justify-content: center;

    li {
    }

    a,
    img {
        display: block;
    }

    a {
        padding: 0.875rem;
    }
}

.attribution {
    font-size: 11px; text-align: center;
    position: absolute;
    left: 50%;
    transform: translateX(-50%);

    a {
        color: hsl(228, 45%, 44%);
    }
}

